--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 
 	<name>JTeeProxy</name>
 	<url>https://jteeproxy.net</url>
+	<description>JTeeProxy is a simple TCP bridging software that allows you to transparently forwarded a TCP port to a primary- and an secondary-host and port. Both hosts can be set to localhost for internal port redirection. </description>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
